# ckanext-bvrc_template

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/bvrc_template/: plugin.py
ckanext/bvrc_template/assets/: script.js  webassets.yml
ckanext/bvrc_template/tests/: test_plugin.py
